<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LabBluetooth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_server">Server</string>
    <string name="get_paired_devices">Pegar Dispositivos já Aparelhados</string>
    <string name="discovery_new_devices">Descobrir novos Dispositivos</string>
    <string name="discovering_new_devices">"Procurando novos Dispositivos..."</string>
    <string name="limpa_lista">Limpar Lista</string>
    <string name="title_activity_conectar">ConectarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tornar_visivel">Tornar Bluetooth Visível</string>
    <string name="iniciar_server">Iniciar Server</string>
    <string name="device_connected">Dispositivo Conectado</string>
    <string name="enviar">Enviar</string>

</resources>
