<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_paired_devices"
        android:id="@+id/btnGetPairedDevices" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/lvPairedDevices"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpa_lista"
        android:id="@+id/btnLimpaPairedDevices" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovery_new_devices"
        android:id="@+id/btnNewDevices"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/lvNewDevices"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpa_lista"
        android:id="@+id/btnLimpaNewDevices" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tornar_visivel"
        android:id="@+id/btnTonarVisivel" />

</LinearLayout>
